--- a/Resources/layout/register.xml
+++ b/Resources/layout/register.xml
@@ -7,13 +7,13 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="0.6"
+        android:layout_weight="0.4"
         android:background="@color/fitnessPrimary">
 
         <Refractored.Controls.CircleImageView
             android:id="@+id/circleImageView1"
-            android:layout_width="309.0dp"
-            android:layout_height="332.5dp"
+            android:layout_width="284.0dp"
+            android:layout_height="173.0dp"
             android:layout_centerInParent="true"
             android:src="@drawable/login_logo"
         />
@@ -35,13 +35,27 @@
         android:orientation="vertical"
         android:layout_height="0dp"
         android:layout_width="match_parent"
-        android:layout_weight="0.4"
+        android:layout_weight="0.6"
         android:background="@color/fitnessPrimaryDark"
         android:padding="10dp"
         >
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/emailText"
+            android:id="@+id/txtFullName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Full name"
+                android:inputType="textPersonName"
+            />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/txtEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
@@ -55,7 +69,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/passwordText"
+            android:id="@+id/txtPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
@@ -73,11 +87,11 @@
             android:layout_height="match_parent"
         >
             <Button
-                android:id="@+id/btnlogin"
+                android:id="@+id/btnregister"
                 android:layout_width="300dp"
                 android:layout_height="45dp"
                 android:layout_centerInParent="true"
-                android:text="Login"
+                android:text="Register"
                 android:textColor="@color/fitnessWhite"
                 android:background="@drawable/fitness_round_button"
             />
@@ -87,7 +101,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:layout_marginTop="8dp"
-                android:layout_below="@+id/btnlogin"
+                android:layout_below="@+id/btnregister"
                 android:text="@string/register_click"
             />
 
