--- a/Resources/layout/login.xml
+++ b/Resources/layout/login.xml
@@ -1,10 +1,16 @@
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+
+        <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.6"
@@ -29,6 +35,17 @@
             android:textColor="@color/fitnessWhite"
          />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="28dp"
+            android:text="Login"
+            android:textColor="@color/fitnessWhite"
+            android:gravity="center"
+            android:layout_above="@id/circleImageView1"
+            android:layout_alignParentTop="true"
+        />
+
     </RelativeLayout>
 
     <LinearLayout
@@ -41,7 +58,7 @@
         >
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/emailText"
+            android:id="@+id/txtLoginEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
@@ -55,7 +72,7 @@
         </android.support.design.widget.TextInputLayout>
 
         <android.support.design.widget.TextInputLayout
-            android:id="@+id/passwordText"
+            android:id="@+id/txtLoginPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
@@ -73,7 +90,7 @@
             android:layout_height="match_parent"
         >
             <Button
-                android:id="@+id/btnlogin"
+                android:id="@+id/btnLogin"
                 android:layout_width="300dp"
                 android:layout_height="45dp"
                 android:layout_centerInParent="true"
@@ -83,10 +100,11 @@
             />
 
             <TextView
+                android:id="@+id/txtClickToRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="10dp"
                 android:layout_below="@+id/btnlogin"
                 android:text="@string/register_click"
             />
@@ -94,4 +112,7 @@
         </RelativeLayout>
 
     </LinearLayout>
-</LinearLayout>
+
+        </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
