--- a/Resources/layout/map.xml
+++ b/Resources/layout/map.xml
@@ -1,17 +1,166 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
-    <TextView
+    <fragment
+        android:id="@+id/map"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:text="Map"
-        android:textColor="#000"
-        android:layout_centerInParent="true"
-        android:gravity="center"
+        android:layout_height="match_parent"
+        class="com.google.android.gms.maps.SupportMapFragment"
     />
 
-</RelativeLayout>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="70dp"
+        >
+
+        <FrameLayout
+            android:id="@+id/frameLocations"
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:background="@color/fitnessPrimaryDark"
+        >
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+            >
+                <RelativeLayout
+                    android:id="@+id/layoutStartDestination"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:clickable="true"
+                    android:layout_weight="0.5"
+                >
+                    <ImageView
+                        android:layout_width="8dp"
+                        android:layout_height="8dp"
+                        android:src="@drawable/greenball"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="10dp"
+                    />
+
+                    <TextView
+                        android:id="@+id/txtStartDestination"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Starting Destination"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="30dp"
+                        android:maxLines="2"
+                        android:gravity="center_vertical"
+                        android:layout_marginRight="36dp"
+                    />
+
+                    <RadioButton
+                        android:id="@+id/rbtnStartDestination"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="10dp"
+                    />
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_gravity="end"
+                        android:layout_alignParentBottom="true"
+                        android:background="#e2e2e2"
+                    />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/layoutEndDestination"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:clickable="true"
+                    android:layout_weight="0.5"
+                >
+                    <ImageView
+                        android:layout_width="8dp"
+                        android:layout_height="8dp"
+                        android:src="@drawable/redball"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="10dp"
+                    />
+
+                    <TextView
+                        android:id="@+id/txtEndDestination"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Ending Destination"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="30dp"
+                        android:maxLines="2"
+                        android:gravity="center_vertical"
+                        android:layout_marginRight="36dp"
+                    />
+
+                    <RadioButton
+                        android:id="@+id/rbtnEndDestination"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginRight="10dp"
+                    />
+
+                </RelativeLayout>
+
+            </LinearLayout>
+
+        </FrameLayout>
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/myLocation"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:clickable="true"
+        android:layout_gravity="center|right"
+        android:background="@color/fitnessPrimaryDark"
+        android:layout_marginRight="16dp"
+        >
+        
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:tint="@color/fitnessAccent"
+            android:padding="5dp"
+            android:src="@mipmap/ic_my_location_black_48dp"
+        />
+        
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/btnMapStart"
+        android:layout_width="300dp"
+        android:layout_height="40dp"
+        android:text="Start"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="30dp"
+        android:textAllCaps="false"
+        android:textColor="@color/fitnessWhite"
+        android:background="@drawable/fitness_round_button"
+        android:drawableLeft="@drawable/baseline_directions_run_black_24"       
+        android:paddingLeft="10dp"
+        android:paddingRight="30dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
+        android:elevation="2dp"
+        android:translationZ="2dp"
+    />
+
+</FrameLayout>
