--- a/Resources/layout/map.xml
+++ b/Resources/layout/map.xml
@@ -1,6 +1,5 @@
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -123,6 +122,14 @@
         </FrameLayout>
 
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/centreMarker"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:src="@drawable/greenmarker"
+    />
 
     <RelativeLayout
         android:id="@+id/myLocation"
