--- a/Resources/layout/map_timer.xml
+++ b/Resources/layout/map_timer.xml
@@ -31,7 +31,7 @@
 
             <TextView
                 android:id="@+id/txtTimer"
-                android:text="0:0:0"
+                android:text="0 : 0 : 0"
                 android:textSize="30dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
