Added datasheet bottom sheet

--- a/Resources/layout/map.xml
+++ b/Resources/layout/map.xml
@@ -185,6 +185,7 @@
     </FrameLayout>
 
     <include layout="@layout/map_timer"/>
+    <include layout="@layout/map_datasheet"/>
 
 </android.support.design.widget.CoordinatorLayout>
 
