--- a/Resources/layout/map_datasheet.xml
+++ b/Resources/layout/map_datasheet.xml
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
-                android:id="@+id/txtTotalTime"
+                android:id="@+id/txtTotalDistance"
                 android:text="Distance"
                 android:textColor="#fff"
                 android:textSize="18dp"
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
-                android:id="@+id/txtTotalTime"
+                android:id="@+id/txtSpeed"
                 android:text="Speed"
                 android:textColor="#fff"
                 android:textSize="18dp"
