--- a/Resources/layout/calendar.xml
+++ b/Resources/layout/calendar.xml
@@ -1,16 +1,87 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/calendarView"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:text="Calendar"
-        android:textColor="#000"
-        android:layout_centerInParent="true"
-        android:gravity="center"
-    />
+        android:layout_height="match_parent">
 
-</RelativeLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.8"
+            android:background="@color/fitnessPrimaryDark">
+
+            <CalendarView
+                android:id="@+id/viewCalendar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:minWidth="25px"
+                android:minHeight="25px"/>
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.4"
+            android:background="@color/fitnessPrimary">
+
+                <TextView
+                    android:id="@+id/txtCalendarDisplay"
+                    android:text="Workout List"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="#fff"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_weight="0.3"
+            android:padding="10dp"
+            >
+
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/txtWorkoutInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Enter your workout"
+                    android:inputType="text"
+                />
+
+            </android.support.design.widget.TextInputLayout>
+
+                <Button
+                android:id="@+id/btnCalendarStart"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:text="Start"
+                android:layout_gravity="center|bottom"
+                android:layout_marginBottom="30dp"
+                android:textAllCaps="false"
+                android:textColor="@color/fitnessWhite"
+                android:background="@drawable/fitness_round_button"
+                android:drawableLeft="@drawable/baseline_fitness_center_black_24"       
+                android:paddingLeft="10dp"
+                android:paddingRight="30dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:elevation="2dp"
+                android:translationZ="2dp"/>
+
+        </LinearLayout>
+    </LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
