--- a/Resources/layout/calendar.xml
+++ b/Resources/layout/calendar.xml
@@ -4,84 +4,84 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:orientation="vertical"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.8"
-            android:background="@color/fitnessPrimaryDark">
-
-            <CalendarView
-                android:id="@+id/viewCalendar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:minWidth="25px"
-                android:minHeight="25px"/>
-
-        </FrameLayout>
-
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.4"
-            android:background="@color/fitnessPrimary">
+            android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/txtCalendarDisplay"
-                    android:text="Workout List"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.8"
+                android:background="@color/fitnessPrimaryDark">
+
+                <CalendarView
+                    android:id="@+id/viewCalendar"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="#fff"/>
+                    android:layout_height="match_parent"
+                    android:minWidth="25px"
+                    android:minHeight="25px"/>
 
-        </LinearLayout>
+            </FrameLayout>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_height="0dp"
-            android:layout_width="match_parent"
-            android:layout_weight="0.3"
-            android:padding="10dp"
-            >
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/txtWorkoutInput"
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_height="0dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_weight="0.3"
+                android:padding="10dp"
+                android:background="#736f6f">
+
+                 <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_gravity="top"
+                    android:background="#e2e2e2"/>
 
                 <EditText
+                    android:id="@+id/txtWorkoutInput"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Enter your workout"
                     android:inputType="text"
-                />
+                    android:textColor="#fff"/>
 
-            </android.support.design.widget.TextInputLayout>
+                <EditText
+                    android:id="@+id/txtRepInput"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Enter your amount of repetition"
+                    android:inputType="text"
+                    android:visibility="invisible"
+                    android:textColor="#fff"/>
 
                 <Button
-                android:id="@+id/btnCalendarStart"
-                android:layout_width="300dp"
-                android:layout_height="40dp"
-                android:text="Start"
-                android:layout_gravity="center|bottom"
-                android:layout_marginBottom="30dp"
-                android:textAllCaps="false"
-                android:textColor="@color/fitnessWhite"
-                android:background="@drawable/fitness_round_button"
-                android:drawableLeft="@drawable/baseline_fitness_center_black_24"       
-                android:paddingLeft="10dp"
-                android:paddingRight="30dp"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp"
-                android:elevation="2dp"
-                android:translationZ="2dp"/>
+                    android:id="@+id/btnSelfCalendarStart"
+                    android:layout_width="300dp"
+                    android:layout_height="40dp"
+                    android:text="Start Workout"
+                    android:layout_gravity="center|bottom"
+                    android:layout_marginTop="40dp"
+                    android:textAllCaps="false"
+                    android:textColor="@color/fitnessWhite"
+                    android:background="@drawable/fitness_round_button"
+                    android:drawableLeft="@drawable/baseline_fitness_center_black_24"       
+                    android:paddingLeft="10dp"
+                    android:paddingRight="30dp"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    android:elevation="2dp"
+                    android:translationZ="2dp"/>
 
+            </LinearLayout>
         </LinearLayout>
-    </LinearLayout>
+    </FrameLayout>
+
+    <include layout="@layout/workout"/>
+    <include layout="@layout/workout_recycler_view"/>
+
 </android.support.design.widget.CoordinatorLayout>
