--- a/Resources/layout/workout.xml
+++ b/Resources/layout/workout.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layoutWorkout"
@@ -15,6 +15,7 @@
         android:background="@color/fitnessWhite">
 
         <TextView
+            android:id="@+id/txttest"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="doi"/>
