--- a/Resources/layout/workout_row.xml
+++ b/Resources/layout/workout_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layoutWorkoutRow"
     android:orientation="vertical"
 	android:paddingTop="16dp"
 	android:paddingLeft="16dp"
@@ -14,7 +15,7 @@
 		android:layout_width="match_parent">
 
 		<TextView
-			android:id="@+id/txtCalendarWorkout2"
+			android:id="@+id/txtCalendarWorkout"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
 			android:gravity="center"
@@ -24,7 +25,7 @@
 		/>
 
 		<TextView
-			android:id="@+id/txtCalendarReps2"
+			android:id="@+id/txtCalendarReps"
 			android:text="Rep"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
