--- a/Resources/layout/workout.xml
+++ b/Resources/layout/workout.xml
@@ -11,14 +11,42 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.8"
         android:background="@color/fitnessWhite">
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom">
 
         <TextView
             android:id="@+id/txttest"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="doi"/>
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:text="doi"
+            android:textAlignment="center"/>
+
+        <Button
+            android:id="@+id/btnSelfCalendarStart"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:text="Start Workout"
+            android:layout_gravity="center"
+            android:layout_marginTop="40dp"
+            android:textAllCaps="false"
+            android:textColor="@color/fitnessWhite"
+            android:background="@drawable/fitness_round_button"
+            android:drawableLeft="@drawable/baseline_fitness_center_black_24"       
+            android:paddingLeft="10dp"
+            android:paddingRight="30dp"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:elevation="2dp"
+            android:translationZ="2dp"/>
 
     </LinearLayout>
 
