--- a/Resources/layout/calendar.xml
+++ b/Resources/layout/calendar.xml
@@ -13,7 +13,7 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="0.8"
+                android:layout_weight="0.7"
                 android:background="@color/fitnessPrimaryDark">
 
                 <CalendarView
@@ -113,8 +113,7 @@
                                 android:layout_gravity="end"
                                 android:layout_alignParentRight="true"
                                 android:layout_centerVertical="true"
-                                android:layout_marginRight="10dp"
-                            />
+                                android:layout_marginRight="10dp"/>
 
                         </RelativeLayout>
 
@@ -176,25 +175,25 @@
                     android:visibility="invisible"
                     android:textColor="#fff"/>
 
+                <Button
+                android:id="@+id/btnSelfCalendarStart"
+                android:layout_width="300dp"
+                android:layout_height="40dp"
+                android:text="Start Workout"
+                android:layout_gravity="center|bottom"
+                android:textAllCaps="false"
+                android:textColor="@color/fitnessWhite"
+                android:background="@drawable/fitness_round_button"
+                android:drawableLeft="@drawable/baseline_fitness_center_black_24"       
+                android:paddingLeft="10dp"
+                android:paddingRight="30dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp"
+                android:elevation="2dp"
+                android:translationZ="2dp"
+                android:layout_marginBottom="10dp"/>
+
                 </LinearLayout>
-
-            <Button
-                    android:id="@+id/btnSelfCalendarStart"
-                    android:layout_width="300dp"
-                    android:layout_height="40dp"
-                    android:text="Start Workout"
-                    android:layout_gravity="center|bottom"
-                    android:textAllCaps="false"
-                    android:textColor="@color/fitnessWhite"
-                    android:background="@drawable/fitness_round_button"
-                    android:drawableLeft="@drawable/baseline_fitness_center_black_24"       
-                    android:paddingLeft="10dp"
-                    android:paddingRight="30dp"
-                    android:paddingTop="8dp"
-                    android:paddingBottom="8dp"
-                    android:elevation="2dp"
-                    android:translationZ="2dp"/>
-
             </LinearLayout>
         </LinearLayout>
 
