--- a/Resources/layout/diet_planner.xml
+++ b/Resources/layout/diet_planner.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -92,7 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="20dp"
-            android:text="PointChart"/>
+            android:text="BarChart"/>
 
         <ImageView
             android:id="@+id/sortdownImage"
