--- a/Resources/layout/help.xml
+++ b/Resources/layout/help.xml
@@ -53,15 +53,22 @@
         android:hint="Description"
         android:layout_marginTop="20dp"/>
     
-    <Button
-        android:id="@+id/btnContactSubmit"
-        android:layout_width="150dp"
-        android:layout_height="35dp"
-        android:text="Submit"
-        android:layout_gravity="center"
-        android:textAllCaps="false"
-        android:textColor="@color/fitnessWhite"
-        android:background="@drawable/fitness_round_button"
-        android:layout_marginTop="300dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <Button
+            android:id="@+id/btnContactSubmit"
+            android:layout_width="150dp"
+            android:layout_height="35dp"
+            android:text="Submit"
+            android:layout_gravity="right"
+            android:textAllCaps="false"
+            android:textColor="@color/fitnessWhite"
+            android:background="@drawable/fitness_round_button"
+            android:layout_marginTop="20dp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
